[FIX] Add extra space on the bottom page in Tiki installer

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -4386,7 +4386,8 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
   #tiki-installer .installer-content {
     background-color: white;
     min-height: 100vh;
-    padding-top: 3%; }
+    padding-top: 3%;
+    padding-bottom: 5em; }
   #tiki-installer .floating-links {
     position: fixed;
     bottom: 1%;
