--- a/themes/base_files/scss/_tiki-installer.scss
+++ b/themes/base_files/scss/_tiki-installer.scss
@@ -23,6 +23,7 @@
         background-color: white;
         min-height: 100vh;
         padding-top: 3%;
+        padding-bottom: 5em;
     }
 
     .floating-links {
